<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".Edit">
    <TextView android:id="@+id/header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lineSpacingExtra="8sp" android:text="@string/edit_restaurant" android:textAlignment="center" android:textAllCaps="true" android:textSize="24sp" app:layout_constraintBottom_toBottomOf="@+id/btn_back" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/btn_back" app:layout_constraintTop_toTopOf="@+id/btn_back"/>
    <Button android:id="@+id/btn_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_back" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <Button android:id="@+id/btn_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:textAppearance="@style/TextAppearance.AppCompat.Medium" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout android:id="@+id/linearLayout" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="45dp" android:orientation="vertical" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:id="@+id/name_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/name" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <EditText android:id="@+id/name_text" android:layout_width="match_parent" android:layout_height="48dp" android:autofillHints="" android:ems="10" android:hint="@string/bob_s_bar_amp_grill" android:inputType="text"/>
        <TextView android:id="@+id/address_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/address" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <EditText android:id="@+id/address_text" android:layout_width="match_parent" android:layout_height="48dp" android:autofillHints="" android:ems="10" android:hint="@string/_789_restaurant_way" android:inputType="textPostalAddress"/>
        <TextView android:id="@+id/number_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/phone_number" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <EditText android:id="@+id/number_text" android:layout_width="match_parent" android:layout_height="48dp" android:autofillHints="" android:ems="10" android:hint="@string/_555_123_4567" android:inputType="phone"/>
        <TextView android:id="@+id/description_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/description" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <EditText android:id="@+id/description_text" android:layout_width="match_parent" android:layout_height="100dp" android:autofillHints="" android:ems="10" android:gravity="start|top" android:hint="@string/good_chicken_wings" android:inputType="textMultiLine"/>
        <TextView android:id="@+id/rating_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/rating" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <RatingBar android:id="@+id/ratingBar" style="@style/Widget.AppCompat.RatingBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numStars="5" android:rating="2.5" android:stepSize=".5"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>